--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,4 +9,8 @@ Depends: R (>= 3.2.0)
 License: MIT
 Encoding: UTF-8
 LazyData: true
-Imports: survival, jsonlite, dplyr, broom
+Imports: 
+  survival,
+  jsonlite,
+  dplyr,
+  broom
